spike: scrollbar fixes

--- a/packages/dendron-next-server/assets/themes/dark-theme.less
+++ b/packages/dendron-next-server/assets/themes/dark-theme.less
@@ -16,3 +16,23 @@
 @card-skeleton-bg: #424242;
 @skeleton-color: #424242;
 @table-header-sort-active-bg: #424242;
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: @body-background;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
